[EFL] FrameLoaderClient should send "load,finished" signal for all frame, not just the main one https://bugs.webkit.org/show_bug.cgi?id=84052

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-04-17
Reviewed by Antonio Gomes.

Source/WebKit/efl:

Emit the "load,finished" signal from dispatchDidFinishLoad() / instead of
postProgressFinishedNotification() in order to send notifications all frames,
not just the main one.

* WebCoreSupport/FrameLoaderClientEfl.cpp:
(WebCore::FrameLoaderClientEfl::postProgressFinishedNotification):
(WebCore::FrameLoaderClientEfl::dispatchDidFinishLoad):
(WebCore::FrameLoaderClientEfl::dispatchDidFailLoad):

LayoutTests:

Unskip EFL test cases which rely on the DumpRenderTree support for
LayoutTestController's dumpFrameLoadCallbacks() and expect notifications for other
frame than the main one.

* platform/efl/Skipped:

Canonical link: https://commits.webkit.org/101688@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114420 268f45cc-cd09-0410-ab3c-d52691b4dbfc